--- a/src/main/webapp/app/entities/person/founisseur/list-founisseurs/list-founisseurs.component.html
+++ b/src/main/webapp/app/entities/person/founisseur/list-founisseurs/list-founisseurs.component.html
@@ -69,7 +69,7 @@
                 <i class="fa fa-edit"></i>
                 Edit
               </a>
-              <a href="http://localhost/intell/public/admin/client/1/details" type="button" class="btn btn-purple btn-alt btn-xs">
+              <a [routerLink]="['/person', person.id, 'view']" type="button" class="btn btn-purple btn-alt btn-xs">
                 <i class="fa fa-eye"></i>
                 Details
               </a>
