--- a/src/main/webapp/app/entities/product/list/product.component.html
+++ b/src/main/webapp/app/entities/product/list/product.component.html
@@ -78,7 +78,7 @@
                   </li>
 
                   <li>
-                    <a href="#" data-toggle="modal" data-target="#priceUpdate1">
+                    <a data-toggle="modal" data-target="#priceUpdate" (click)="setSelectedProduct(product, true)">
                       <i class="fa fa-usd" style="color: #0ad629"></i>
                       Update Price
                     </a>
@@ -86,7 +86,7 @@
 
                   <!-- product delete modal trigger -->
                   <li>
-                    <a type="submit" (click)="delete(product)">
+                    <a data-toggle="modal" data-target="#deleteModal" (click)="setSelectedProduct(product)">
                       <i class="fa fa-trash" style="color: #edb426"></i>
                       Delete
                     </a>
@@ -102,7 +102,7 @@
 
                   <!-- Print barcode of a product -->
                   <li>
-                    <a href="http://localhost/intell/public/admin/product/1/print/barcode">
+                    <a [routerLink]="['/product', product.id, 'printBarcode']">
                       <i class="fa fa-barcode" style="color: purple"></i>
                       Print Barcode
                     </a>
@@ -113,6 +113,82 @@
           </tr>
         </tbody>
       </table>
+      <!-- Price Update Modal -->
+      <div class="modal fade" id="priceUpdate" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" id="closeModal" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">Update {{ selectedProduct?.name }} Price</h4>
+            </div>
+            <form [formGroup]="editPriceForm">
+              <div class="modal-body">
+                <div class="form-group">
+                  <label>prix de revient</label>
+                  <input
+                    type="text"
+                    name="cost_price"
+                    class="form-control number"
+                    formControlName="costPrice"
+                    id="cost_price"
+                    onkeypress="return event.charCode <= 57 && event.charCode != 32"
+                  />
+                </div>
+
+                <div class="form-group">
+                  <label>prix de vente</label>
+                  <input type="text" name="mrp" class="form-control number" formControlName="minimumRetailPrice" />
+                  <span id="pinky"></span>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <button type="submit" class="btn btn-primary" [disabled]="editPriceForm.invalid" (click)="saveUpdatePrice()">
+                  modifier
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Price Update Modal Ends-->
+
+      <!-- modal for delete product -->
+      <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" id="closeModal2" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">
+                {{ selectedProduct?.name }}
+              </h4>
+            </div>
+            <div class="modal-body">
+              <h4>
+                Êtes-vous sûr de supprimer le produit <b>{{ selectedProduct?.name }}</b
+                >?
+              </h4>
+              <br />
+
+              <h4 style="color: red" *ngIf="countOfTransactionAtSelectedProduct > 0">
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                Ce produit a trop de transactions, il ne peut donc pas être supprimé !
+              </h4>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+              <button type="submit" class="btn btn-danger" (click)="deleteProduct()" [disabled]="countOfTransactionAtSelectedProduct > 0">
+                Supprimer
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- delete modal ends here -->
     </div>
     <!--Pagination-->
     <div class="row justify-content-center" style="text-align: center">
